src/test/ui/associated-type-bounds/bounds-on-assoc-in-trait.stderr
error[E0277]: `<<Self as Case1>::A as std::iter::Iterator>::Item` doesn't implement `std::fmt::Debug`
  --> $DIR/bounds-on-assoc-in-trait.rs:20:28
   |
LL |     type A: Iterator<Item: Debug>;
   |                            ^^^^^ `<<Self as Case1>::A as std::iter::Iterator>::Item` cannot be formatted using `{:?}` because it doesn't implement `std::fmt::Debug`
   | 
  ::: $SRC_DIR/libcore/fmt/mod.rs:LL:COL
   |
LL | pub trait Debug {
   | --------------- required by this bound in `std::fmt::Debug`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `<<Self as Case1>::A as std::iter::Iterator>::Item`
help: consider further restricting the associated type
   |
LL | trait Case1 where <<Self as Case1>::A as std::iter::Iterator>::Item: std::fmt::Debug {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `<<Self as Foo>::Out as Baz>::Assoc: std::default::Default` is not satisfied
  --> $DIR/bounds-on-assoc-in-trait.rs:37:38
   |
LL | pub trait Foo { type Out: Baz<Assoc: Default>; }
   |                                      ^^^^^^^ the trait `std::default::Default` is not implemented for `<<Self as Foo>::Out as Baz>::Assoc`
   | 
  ::: $SRC_DIR/libcore/default.rs:LL:COL
   |
LL | pub trait Default: Sized {
   | ------------------------ required by this bound in `std::default::Default`
   |
help: consider further restricting the associated type
   |
LL | pub trait Foo where <<Self as Foo>::Out as Baz>::Assoc: std::default::Default { type Out: Baz<Assoc: Default>; }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0271]: type mismatch resolving `<<Self as Foo>::Out as Baz>::Assoc == <Self as Foo>::Out`
  --> $DIR/bounds-on-assoc-in-trait.rs:37:17
   |
LL | pub trait Foo { type Out: Baz<Assoc: Default>; }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected Foo::Out, found Baz::Assoc
   | 
  ::: $SRC_DIR/libcore/marker.rs:LL:COL
   |
LL | pub trait Sized {
   | --------------- required by this bound in `std::marker::Sized`
   |
   = note: expected associated type `<Self as Foo>::Out`
              found associated type `<<Self as Foo>::Out as Baz>::Assoc`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
